// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionExecService addConfusionTS allows adding new timesteps 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveStep: 0
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: [{
      Difficulty: -5
      Speed: 5
    }]

    Feedbacks: []

    Participants: []

    Settings: {
      ConfusionActive: true
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: false
    }
`;

exports[`SessionExecService addConfusionTS allows adding new timesteps 2`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveStep: 0
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: [{
      Difficulty: -5
      Speed: 5
    },{
      Difficulty: 3
      Speed: -4
    }]

    Feedbacks: []

    Participants: []

    Settings: {
      ConfusionActive: true
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: false
    }
`;

exports[`SessionExecService addFeedback allows adding new feedbacks to a running session 1`] = `
Object {
  "_id": "5f6a6243dcf6092fd150b4f6",
  "content": "feedback1",
  "createdAt": 2020-09-22T20:44:51.339Z,
  "id": "5f6a6243dcf6092fd150b4f6",
  "updatedAt": 2020-09-22T20:44:51.339Z,
  "votes": 0,
}
`;

exports[`SessionExecService addFeedback allows adding new feedbacks to a running session 2`] = `
Object {
  "_id": "5f6a6243dcf6092fd150b4f7",
  "content": "feedback2",
  "createdAt": 2020-09-22T20:44:51.350Z,
  "id": "5f6a6243dcf6092fd150b4f7",
  "updatedAt": 2020-09-22T20:44:51.350Z,
  "votes": 0,
}
`;

exports[`SessionExecService addResponse (auth) allows participants with a login to respond exactly once 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: [{
      Username: testparticipant1
    },{
      Username: participant2
    },{
      Username: aaiparticipant
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: true
    }
`;

exports[`SessionExecService addResponse (auth) does not allow aai participants to login 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: [{
      Username: testparticipant1
    },{
      Username: participant2
    },{
      Username: aaiparticipant
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: true
    }
`;

exports[`SessionExecService addResponse (auth) prevents participants without a login from responding 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: [{
      Username: testparticipant1
    },{
      Username: participant2
    },{
      Username: aaiparticipant
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: true
    }
`;

exports[`SessionExecService addResponse (auth) prevents unauthorized participants from responding 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: [{
      Username: testparticipant1
    },{
      Username: participant2
    },{
      Username: aaiparticipant
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: true
    }
`;

exports[`SessionExecService addResponse allows adding responses to a FREE question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to a FREE_RANGE question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to a SC question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to an MC question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveStep: 1
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Participants: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
      ParticipantAuthentication: false
    }
`;
